kind/istio/reverse-proxy/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-proxy
spec:
  hosts:
  - httpbin.reverse.proxy
  gateways:
  - proxy
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: httpbin.org
        port:
          number: 443
    # https://istio.io/latest/docs/reference/config/networking/virtual-service/#HTTPRewrite
    # HTTPRewrite can be used to rewrite specific parts of a HTTP request before forwarding the request to the destination.
    rewrite:
      authority: httpbin.org
